Fixed gap responsive product page

--- a/src/components/ProductPage/productPageResponsive.css
+++ b/src/components/ProductPage/productPageResponsive.css
@@ -2,7 +2,7 @@
   .product-box {
     flex-direction: column;
     align-items: center;
-    gap: 0%;
+    gap: 2%;
   }
   .product-imgBox {
     width: 70%;
